# kafka-example

./: Cargo.toml  README.md  docker-compose.yml  kafka.properties  zookeeper.properties
src/: main.rs
