[package]
name = "k"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
rdkafka = "0.26.0"
tokio = { version = "1.6.0", features = ["full"] }
